<resources>
    <string name="app_name">KCL</string>
    <string name="title_home">Home</string>
    <string name="title_aboutus">About us</string>
    <string name="title_dashboard">About us</string>
    <string name="title_notifications">About us</string>

    <string name="title_gallery">Gallery</string>
    <string name="title_News">News</string>
    <string name="title_membership">Membership</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">Signup</string>
    <string name="membership_registration">Membership Registration</string>

    <string name="aboutus_points">The first of its kind in the state of Karnataka is an extensive organization
        formed by the self-employed small-scale cable operators of Karnataka. It marks a revolutionary and extra
        ordinary stride in the world of cable TV distribution in India. This was started as an attempt to sustain
        the business models of the small operators in the state and strategic modernization in the un-organized
        world of cable TV.Cable TV distribution started in a big way in Karnataka in the beginning of the 1990s.
        Today it has become permeating as electricity and telephone lines, reaching every nook and corner of the
        state. The necessity to constantly upgrade the technology in the field initially prompted the need for a
        union. But by the middle of the 90s, it became a dire necessity to face the multiple challenges the business
        faced, like the onslaught by the MSOs, the skyrocketing rates of the pay channels. Soon KSCOA
        grew into an organization with taluk level in each district of Karnataka with more than 10,000
        operators under them. The executive committee headed by an efficient leadership runs the day to
        day functioning of the organization. The state committee has sub-committees to look into each
        problem area and implement solutions. The district level committees control the district level
        administrations, which in turn impart all information to the member operators</string>
    <string name="aboutus_points2">
        KSCOA conducts a varied range of activities every year. KSCOA conducts state level campaigns that consist of processions and public meetings to raise public awareness against the invasions of large scale MSOs and to protest the various unjust rules and regulations of the Centre and State governments. Cable TV Operators are regularly trained in the use of the latest technology under our guidance. Protests and strikes against the unfriendly business policies of the government, increase in taxes and resistance to the unjustifiable increase in rates by the pay channels are all some of the many episodes in the history of KSCOA
    </string>
    <string name="name">Name</string>
    <string name="blood_group">Blood Group</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="father_name">Father Name</string>
    <string name="state">State</string>
    <string name="pincode">Pincode</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="choose_a_photo">Choose a photo</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="taluk">Taluk</string>
    <string name="street_name">Street Name</string>
    <string name="nominee_aadhaar_no">Nominee Aadhaar No</string>
    <string name="password">Password</string>
    <string name="network_name">Network Name</string>
    <string name="door_no">Door No</string>
    <string name="village">Village</string>
    <string name="district">District</string>
    <string name="nominee_name">Nominee Name</string>
    <string name="nominee_relationship">Nominee Relationship</string>
    <string name="nominee_dob">Nominee DOB</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="todo">TODO</string>
    <string name="or_signin_as_a_member">Or Signin As a Employee</string>
    <string name="memberid">Memberid</string>
    <string name="signup_as_a_member">Signup as a member</string>
    <string name="pay">Pay</string>
    <string name="logout">Logout</string>
    <string name="personal_details">Personal Details</string>
    <string name="employee_details">Employee Details</string>
    <string name="nominee_details">Nominee Details</string>
    <string name="id">id</string>
    <string name="logo">logo</string>
    <string name="membership_fee">Membership Fee</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="inr_1000">INR 1000</string>


</resources>