<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".SignupandSignin.Signup.Signupasmember">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:text="@string/signup"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="409dp"
        android:layout_height="593dp"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="50dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textback"
                android:drawableStart="@drawable/name"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/name"

                android:inputType="textPersonName"
                android:padding="15dp" />

            <EditText
                android:id="@+id/fathername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/textback"
                android:drawableStart="@drawable/name"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/father_name"
                android:inputType="textPersonName"
                android:padding="15dp" />

            <EditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:ems="10"
                android:focusable="false"
                android:hint="@string/date_of_birth"

                android:inputType="date"
                android:paddingTop="15dp" />

            <EditText
                android:id="@+id/bloodgroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:background="@drawable/textback"
                android:ems="10"
                android:hint="@string/blood_group"

                android:inputType="text"
                android:padding="15dp"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/textback"
                android:drawableStart="@drawable/ic_baseline_local_phone_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="number|phone"
                android:padding="15dp" />
            <EditText
                android:id="@+id/memberid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/textback"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="Memberid"
                android:inputType="text"
                android:padding="15dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:background="@drawable/textback"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/email"

                android:inputType="textEmailAddress"
                android:padding="15dp"
                tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/textback"
                android:drawableStart="@android:drawable/ic_lock_lock"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/password"

                android:inputType="textPassword"
                android:padding="15dp"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/adharnum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/textback"
                android:ems="10"
                android:hint="@string/aadhaar_number"
                android:inputType="number"
                android:padding="15dp" />

            <EditText
                android:id="@+id/networkname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/textback"
                android:ems="10"
                android:hint="@string/network_name"
                android:inputType="text"
                android:padding="15dp" />

            <EditText
                android:id="@+id/doorno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/textback"
                android:ems="10"
                android:hint="@string/door_no"
                android:inputType="text"
                android:padding="15dp" />

            <EditText
                android:id="@+id/streetname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/textback"
                android:ems="10"
                android:hint="@string/street_name"
                android:inputType="text"
                android:padding="15dp" />

            <EditText
                android:id="@+id/pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/textback"
                android:drawableStart="@drawable/ic_baseline_pin_drop_24"
                android:drawablePadding="5dp"
                android:ems="10"
                android:hint="@string/pincode"
                android:inputType="textPostalAddress"
                android:padding="15dp"

                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/village"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/textback"
                android:ems="10"
                android:hint="@string/village"
                android:inputType="text"
                android:padding="15dp"
                android:paddingTop="15dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingTop="15dp"
                android:text="@string/state" />

            <Spinner
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingTop="15dp"
                android:text="@string/district" />

            <Spinner
                android:id="@+id/District"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:paddingTop="15dp" />

            <EditText
                android:id="@+id/taluk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/textback"
                android:ems="10"
                android:hint="@string/taluk"
                android:inputType="text"
                android:padding="15dp"
                android:paddingTop="15dp" />

            <EditText
                android:id="@+id/nname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/textback"
                android:ems="10"
                android:hint="@string/nominee_name"
                android:inputType="text"
                android:padding="15dp"
                android:paddingTop="15dp" />

            <EditText
                android:id="@+id/naddar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/textback"
                android:ems="10"
                android:hint="@string/nominee_aadhaar_no"
                android:inputType="text"
                android:padding="15dp"
                android:paddingTop="15dp" />

            <EditText
                android:id="@+id/nrelation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/textback"
                android:ems="10"
                android:hint="@string/nominee_relationship"
                android:inputType="text"
                android:padding="15dp"
                android:paddingTop="15dp" />

            <EditText
                android:id="@+id/ndob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/nominee_dob"
                android:inputType="date"
                android:paddingTop="15dp" />

            <Button
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/purple_700"
                android:text="@string/choose_a_photo" />

            <Button
                android:id="@+id/submit"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/buttonround"
                android:text="@string/submit"
                android:textColor="#D32F2F" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>